--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "uzitgroup",
+  "name": "uzit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.6",
-    "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^5.3.4"
+    "@react-three/drei": "^9.97.3",
+    "@react-three/fiber": "^8.15.16",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.40",
+    "@types/three": "^0.161.2",
+    "animejs": "^3.2.2",
+    "aos": "^2.3.4",
+    "classnames": "^2.5.1",
+    "gsap": "^3.12.5",
+    "i18next": "^23.8.2",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.3",
+    "preact": "^10.19.3",
+    "react-i18next": "^14.0.5",
+    "react-router": "^6.21.3",
+    "react-router-dom": "^6.21.3",
+    "sass": "^1.70.0",
+    "styled-components": "^6.1.8",
+    "three": "^0.160.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "@preact/preset-vite": "^2.7.0",
+    "autoprefixer": "^10.4.17",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.12"
   }
 }
